3-apps/maliev-quote-engine/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maliev-quote-engine
  labels:
    app: maliev-quote-engine
spec:
  type: NodePort
  selector:
    app: maliev-quote-engine
  ports:
    - port: 8080
      targetPort: 8080
