3-apps/maliev-quote-engine/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maliev-quote-engine-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  tls:
    - hosts:
        - make.maliev.com
      secretName: maliev-com-wildcard-tls
  rules:
    - host: make.maliev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maliev-quote-engine
                port:
                  number: 8080
